[package]
name = "gitlab_untar"
version = "0.1.0"
authors = ["Éric BURGHARD <eric.burghard@solarsis.co.ao>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = { path = "../rust-gitlab" }
clap = { path = "../clap" }
serde = "1.0"
serde_yaml = "0.8"
bytesize = "1.0.0"
flate2 = "1.0"
tar = "0.4"